--- a/patient-service/src/main/resources/application.properties
+++ b/patient-service/src/main/resources/application.properties
@@ -15,3 +15,9 @@ spring.sql.init.mode=always
 server.port=4000
 
 logging.level.root=info
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.url=/api-docs.yaml
+springdoc.api-docs.enabled=true
