--- a/patient-service/pom.xml
+++ b/patient-service/pom.xml
@@ -106,6 +106,12 @@
             <version>4.29.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>3.3.10</version>
+        </dependency>
+
     </dependencies>
 
 
